cm4all-beng-proxy (0.8.6) unstable; urgency=low

  * translation: added support for custom error documents
  * response: convert HEAD to GET if filter follows
  * python: depend on python-twisted-core

 --

cm4all-beng-proxy (0.8.5) unstable; urgency=low

  * istream-tee: allow second output to block
  * widget-http: don't transform error documents
  * response, widget-http: disable filters after widget frame request
  * translation: added packet FILTER_4XX to filter client errors
  * merged release 0.7.45

 -- Max Kellermann <mk@cm4all.com>  Thu, 10 Jun 2010 16:13:14 +0200

cm4all-beng-proxy (0.8.4) unstable; urgency=low

  * python: added missing "Response" import
  * python: resume parsing after deferred call
  * http-client: implement istream method as_fd()
  * merged release 0.7.44

 -- Max Kellermann <mk@cm4all.com>  Mon, 07 Jun 2010 17:01:16 +0200

cm4all-beng-proxy (0.8.3) unstable; urgency=low

  * file-handler: implement If-Range (RFC 2616 14.27)
  * merged release 0.7.42

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Jun 2010 16:17:13 +0200

cm4all-beng-proxy (0.8.2) unstable; urgency=low

  * cookie-client: verify the cookie path
  * python: use Twisted's logging library
  * python: added a widget registry class
  * merged release 0.7.41

 -- Max Kellermann <mk@cm4all.com>  Wed, 26 May 2010 13:08:16 +0200

cm4all-beng-proxy (0.8.1) unstable; urgency=low

  * http-cache-memcached: delete entity records on POST

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 May 2010 12:21:55 +0200

cm4all-beng-proxy (0.8) unstable; urgency=low

  * istream: added method as_fd() to convert istream to file descriptor
  * fork: support passing stdin istream fd to child process
  * http-cache: discard only matching entries on POST
  * istream-html-escape: escape single and double quote
  * rewrite-uri: escape the result with XML entities

 -- Max Kellermann <mk@cm4all.com>  Thu, 13 May 2010 12:34:46 +0200

cm4all-beng-proxy (0.7.45) unstable; urgency=low
