@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.8.6) unstable; urgency=low
 
   * translation: added support for custom error documents
   * response: convert HEAD to GET if filter follows
+  * processor: short-circuit on HEAD request
   * python: depend on python-twisted-core
 
  --
